// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupAction renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={20}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      },
      false,
      false,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 26,
          },
          {
            "color": "#F56522",
          },
        ],
      ]
    }
  >
    label
  </Text>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 16,
          "width": 16,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`PopupAction renders correctly when disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={20}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      },
      {
        "opacity": 0.5,
      },
      false,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 26,
          },
          {
            "color": "#F56522",
          },
        ],
      ]
    }
  >
    label
  </Text>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 16,
          "width": 16,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`PopupAction renders correctly with reversed order 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={20}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      },
      false,
      {
        "flexDirection": "row-reverse",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 26,
          },
          {
            "color": "#F56522",
          },
        ],
      ]
    }
  >
    label
  </Text>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 16,
          "width": 16,
        },
        false,
      ]
    }
  />
</View>
`;
